# kpi

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
include/: counters.hpp
include/counters/: cumulativeCounter.hpp  maxCounter.hpp  minCounter.hpp  ordinaryCounter.hpp
src/: CMakeLists.txt  main.cpp
src/kpi/: counters.cpp  ordinaryCounter.cpp
src/kpi/counters/: cumulativeCounter.cpp  maxCounter.cpp  minCounter.cpp  ordinaryCounter.cpp
